@@ -10,6 +10,7 @@ FIXES (BGO):
 	386385 - Gabriel Burt
     333813 - Ruben Vermeersch
     388903 - Ruben Vermeersch
+	385547 - Abock
 	
 FIXES (BNC):
 	202861 - Peter Teichman
